@@ -25,6 +25,9 @@ propertyrandomizer-misc-none=None
 propertyrandomizer-misc-less=Less
 propertyrandomizer-misc-default=Default
 propertyrandomizer-misc-more=More
+propertyrandomizer-unified-technology-delinearization-lots=Lots
+propertyrandomizer-unified-technology-delinearization-some=Some
+propertyrandomizer-unified-technology-delinearization-none=None
 propertyrandomizer-softlock-prevention-control-only=No errors
 propertyrandomizer-softlock-prevention-critical=Critical only
 propertyrandomizer-softlock-prevention-all=All
