@@ -1,14 +1,12 @@
 CURRENTLY ON:
- * Mining fluid required randomizer?
-    * Finding fluids is failing
-    * Do I check minable exists for mining entities?
+ * Tech trigger handler
  * Make unified things more user friendly (final pass)
-    * Make tech prereqs less linear
+    * Figure out why technologies are getting only early science packs (especially when things are delinearized)
  * Test for hidden items/recipes in logic (I think it doesn't do tests now)
  * Add full tests for with unified handlers
  * More safeguards
     * Go through orb and dosh run to see what needs to be changed
- * Fail on softlocks during testing (and perhaps prereq shuffle failures by searching for % or something)
+ * Fail on softlocks during testing (and perhaps also on prereq shuffle failures by searching for % or something)
  * Check for spoil_trigger_result when randomizing spoil results
 
  * (30min) Refactoring lookups (then push commit about refactoring)
